# Surface_Mesher

./: .coverage  README.ipynb  README.md  citation.bib  citation.cff  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml
examples/: README.ipynb  cuboid.ipynb  disk.ipynb  edge.ipynb
src/surface_mesher/: __init__.py  circle.py  cuboid.py  disk.py  edge.py  revolve.py  shape.py  sphere.py
src/surfmesh/: cuboid.py  cylinder.py  revolve.py
tests/: test_circle.py  test_cuboid.py  test_cylinder.py  test_disk.py  test_edge.py  test_revolve.py  test_shape.py  test_sphere.py
