[project]
name = "surface-mesher"
version = "0.1.0"
description = "A Python library to create a simple 3D Surface Mesh using Quadrilateral faces only."
readme = "README.md"
authors = [
    { name = "Chaitanya Kesanapalli", email = "7126460+ckesanapalli@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
]

[project.scripts]
surface-mesher = "surface_mesher:main"

[project.optional-dependencies]
examples = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
]


[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests",
]

# Same as Black.
line-length = 180
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# select = ["E4", "E7", "E9", "F", "I", "RUF"]
select = ["F", "E", "C90", "I", "N", "UP", "YTT", "ANN", "ASYNC", "S", "BLE", "B", "A", "C4",
 "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "LOG", "G", "INP", "PIE", "T20", "PYI",
  "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TC", "INT", "ARG", "PTH", "TD",
   "FIX",  "PD", "PGH", "TRY", "FLY", "NPY", "FAST", "AIR", "PERF", "FURB", "RUF"]
ignore = []
exclude = ["*.ipynb"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
exclude = ["*.ipynb"]

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"